annotate some test code of Abe at network index from line 554 to 560

--- a/744Project/Views/Network/Index.cshtml
+++ b/744Project/Views/Network/Index.cshtml
@@ -550,10 +550,15 @@
 			var transactionId = $(this).parent().attr("id");
 			//var pc = cy.getElementById(processingCenter);
 			//Using Nan's code to get the shortest path...
-			var graph = makeAGraph();
+            /***************************************************************************************************
+            Abe'test code.
+           
+             var graph = makeAGraph();
 			var result = shortestPath(graph, storeIp, processingCenter);
 			console.log("Nans path");
 			console.log(result);
+             ****************************************************************************************************/
+			
 
 			//submitNewTransaction(cy.getElementById(storeIp), transactionId, processingCenter);
 
