--- a/744Project/Views/Shared/_Layout.cshtml
+++ b/744Project/Views/Shared/_Layout.cshtml
@@ -26,11 +26,14 @@
                     @if (User.Identity.IsAuthenticated)
     {
                 <li>@Html.ActionLink("Network", "Index", "Network")</li>
-                <!--<li>Html.ActionLink("Stores", "Index", "Stores")</li>-->
                 <li>@Html.ActionLink("Accounts", "Index", "Accounts")</li>
                 <li>@Html.ActionLink("Credit Cards", "Index", "CreditCards")</li>
                 <li>@Html.ActionLink("Transactions", "Index", "Transactions")</li>
-                <li>@Html.ActionLink("Regions", "Index", "Regions")</li>
+                @*<li>@Html.ActionLink("Regions", "Index", "Regions")</li>
+                <li>@Html.ActionLink("Stores", "Index", "Stores")</li>*@
+
+                <li>@Html.ActionLink("Edit Network", "Index", "EditNetwork")</li>
+
 }
                 </ul>
 				@Html.Partial("_LoginPartial")
