--- a/744Project/Views/Stores/Create.cshtml
+++ b/744Project/Views/Stores/Create.cshtml
@@ -9,7 +9,6 @@
     <div class="panel panel-default">
         <div class="panel-body">
 
-
             @using (Html.BeginForm())
             {
                 @Html.AntiForgeryToken()
@@ -23,6 +22,14 @@
                         <div class="col-md-10">
                             @Html.EditorFor(model => model.storeID, new { htmlAttributes = new { @class = "form-control" } })
                             @Html.ValidationMessageFor(model => model.storeID, "", new { @class = "text-danger" })
+                        </div>
+                    </div>
+
+                    <div class="form-group">
+                        @Html.LabelFor(model => model.storeIP, htmlAttributes: new { @class = "control-label col-md-2" })
+                        <div class="col-md-10">
+                            @Html.EditorFor(model => model.storeIP, new { htmlAttributes = new { @class = "form-control" } })
+                            @Html.ValidationMessageFor(model => model.storeIP, "", new { @class = "text-danger" })
                         </div>
                     </div>
 
@@ -51,6 +58,14 @@
                     </div>
 
                     <div class="form-group">
+                        @Html.LabelFor(model => model.regionID, "regionID", htmlAttributes: new { @class = "control-label col-md-2" })
+                        <div class="col-md-10">
+                            @Html.DropDownList("regionID", null, htmlAttributes: new { @class = "form-control" })
+                            @Html.ValidationMessageFor(model => model.regionID, "", new { @class = "text-danger" })
+                        </div>
+                    </div>
+
+                    <div class="form-group">
                         <div class="col-md-offset-2 col-md-10">
                             <input type="submit" value="Create" class="btn btn-default" />
                         </div>
@@ -61,10 +76,6 @@
             <div>
                 @Html.ActionLink("Back to List", "Index")
             </div>
-
-            @section Scripts {
-                @Scripts.Render("~/bundles/jqueryval")
-            }
 
 </div>
 </div>
