--- a/744Project/Views/Stores/Edit.cshtml
+++ b/744Project/Views/Stores/Edit.cshtml
@@ -9,7 +9,6 @@
     <div class="panel panel-default">
         <div class="panel-body">
 
-
             @using (Html.BeginForm())
             {
                 @Html.AntiForgeryToken()
@@ -19,6 +18,14 @@
                     <hr />
                     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
                     @Html.HiddenFor(model => model.storeID)
+
+                    <div class="form-group">
+                        @Html.LabelFor(model => model.storeIP, htmlAttributes: new { @class = "control-label col-md-2" })
+                        <div class="col-md-10">
+                            @Html.EditorFor(model => model.storeIP, new { htmlAttributes = new { @class = "form-control" } })
+                            @Html.ValidationMessageFor(model => model.storeIP, "", new { @class = "text-danger" })
+                        </div>
+                    </div>
 
                     <div class="form-group">
                         @Html.LabelFor(model => model.storeName, htmlAttributes: new { @class = "control-label col-md-2" })
@@ -45,6 +52,14 @@
                     </div>
 
                     <div class="form-group">
+                        @Html.LabelFor(model => model.regionID, "regionID", htmlAttributes: new { @class = "control-label col-md-2" })
+                        <div class="col-md-10">
+                            @Html.DropDownList("regionID", null, htmlAttributes: new { @class = "form-control" })
+                            @Html.ValidationMessageFor(model => model.regionID, "", new { @class = "text-danger" })
+                        </div>
+                    </div>
+
+                    <div class="form-group">
                         <div class="col-md-offset-2 col-md-10">
                             <input type="submit" value="Save" class="btn btn-default" />
                         </div>
@@ -55,10 +70,6 @@
             <div>
                 @Html.ActionLink("Back to List", "Index")
             </div>
-
-            @section Scripts {
-                @Scripts.Render("~/bundles/jqueryval")
-            }
 
 </div>
 </div>
